feat: Add GET /api/users API
